--- a/FlexHelper.App/MVVM/View/ShellPage.xaml
+++ b/FlexHelper.App/MVVM/View/ShellPage.xaml
@@ -30,7 +30,7 @@
 
         <NavigationView
             PaneDisplayMode="LeftCompact"
-            
+            IsPaneToggleButtonVisible="False"
             AlwaysShowHeader="False"
             x:Name="NavView"
             Canvas.ZIndex="0"
