--- a/FlexHelper.App/MVVM/View/MouseMoverPage.xaml
+++ b/FlexHelper.App/MVVM/View/MouseMoverPage.xaml
@@ -6,57 +6,87 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <Style TargetType="NumberBox">
+            <Setter Property="SmallChange" Value="1" />
+            <Setter Property="LargeChange" Value="1" />
+            <Setter Property="SpinButtonPlacementMode" Value="Compact" />
+            <Setter Property="ValidationMode" Value="InvalidInputOverwritten" />
+        </Style>
+    </Page.Resources>
+
     <StackPanel>
 
-        <StackPanel Orientation="Horizontal" Spacing="15" Margin="0 0 0 15">
+        <Grid ColumnSpacing="5" Margin="0 0 0 10">
 
-            <StackPanel Spacing="5">
-                <TextBlock Text="distance:" />
-                <TextBox Text="{Binding Distance}" />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0" Spacing="5">
+                <NumberBox Header="distance:" Text="{Binding Distance}"/>
             </StackPanel>
 
-            <StackPanel Spacing="5">
-                <TextBlock Text="interval:" />
-                <TextBox Text="{Binding Interval}" />
+            <StackPanel Grid.Column="1" Spacing="5">
+                <NumberBox Header="interval:" Text="{Binding Interval}" />
             </StackPanel>
 
-            <StackPanel Spacing="5">
-                <TextBlock Text="coefFast:" />
-                <TextBox Text="{Binding CoefFast}" />
+            <StackPanel Grid.Column="2" Spacing="5">
+                <NumberBox Header="coefFast:" Text="{Binding CoefFast}" />
             </StackPanel>
-
-        </StackPanel>
+        </Grid>
 
         <Button Content="{Binding BtnText}" 
                 Command="{Binding CycleCommand}"
-                Margin="0 0 0 15"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                Height="60"
+                Margin="0 0 0 10"
                 AccessKey="S"
-                KeyTipPlacementMode="Auto"
-                Height="69" Width="312" />
+                KeyTipPlacementMode="Auto" />
 
-        <TextBlock Text="Pause:"  Margin="0 0 0 15" />
+        <Grid RowSpacing="20">
 
-        <ProgressBar HorizontalAlignment="Left"
-                     Width="312"
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0">
+
+                <TextBlock Text="Pause:" Margin="0 0 0 0" />
+
+                <ProgressBar 
+                    HorizontalAlignment="Stretch" 
                      Minimum="0"
                      Maximum="{Binding Interval}"
                      Value="{Binding MouseMoverWorker.TimerCounter}">
-            <ProgressBar.RenderTransform>
-                <ScaleTransform ScaleY="4" />
-            </ProgressBar.RenderTransform>
-        </ProgressBar>
+                    <ProgressBar.RenderTransform>
+                        <ScaleTransform ScaleY="4" />
+                    </ProgressBar.RenderTransform>
+                </ProgressBar>
 
-        <TextBlock Text="Work:"  Margin="0 15 0 15" />
+            </StackPanel>
 
-        <ProgressBar HorizontalAlignment="Left"
-                     Width="312"
-                     Minimum="0"
-                     Maximum="{Binding MouseMoverWorker.MaxWorkCounter}"
-                     Value="{Binding MouseMoverWorker.WorkCounter}">
-            <ProgressBar.RenderTransform>
-                <ScaleTransform ScaleY="4" />
-            </ProgressBar.RenderTransform>
-        </ProgressBar>
+            <StackPanel Grid.Row="1">
+
+                <TextBlock Text="Work:" Margin="0 0 0 0" />
+
+                <ProgressBar 
+                    HorizontalAlignment="Stretch" 
+                    Minimum="0"
+                    Maximum="{Binding MouseMoverWorker.MaxWorkCounter}"
+                    Value="{Binding MouseMoverWorker.WorkCounter}">
+                    <ProgressBar.RenderTransform>
+                        <ScaleTransform ScaleY="4" />
+                    </ProgressBar.RenderTransform>
+                </ProgressBar>
+
+            </StackPanel>
+
+        </Grid>
 
     </StackPanel>
 
